--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,35 @@ server:
   port: 8080
 
 spring:
+  servlet:
+    multipart:
+      enabled: true #是否启用http上传处理
+      max-request-size: 5MB #设置总上传的数据大小，最大请求文件的大小
+      max-file-size: 5MB #设置单个文件最大长度
+      file-size-threshold: 5MB #当文件达到多少时进行磁盘写入
   mail:
-    host: smtp.qq.com
-    username: 943047520@qq.com
-    password: wgebjarhzpswbbgc
+    host: smtp.163.com
+    username: m18087055369@163.com
+    password: BIFPXPKBMRGXZKHT
     default-encoding: UTF-8
+    port: 465
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          ssl:
+            enable: true
+            socketFactory:
+              port: 465
+              class: javax.net.ssl.SSLSocketFactory
   redis:
     timeout: 5000
     port: 6379
-    host: localhost
+    host: eredis
+#    host: localhost
     database: 0
     jedis:
       pool:
@@ -18,14 +38,12 @@ spring:
         max-wait: 1ms
         max-idle: 4
         min-idle: 0
-
   datasource:
-    url: jdbc:mysql://localhost:3306/Machine_learning_platform?characterEncoding=utf-8&serverTimezone=UTC
+#    url: jdbc:mysql://101.201.65.86:3306/machine_learning_platform?characterEncoding=utf-8&serverTimezone=UTC
+    url: jdbc:mysql://emysql:3306/machine_learning_platform?characterEncoding=utf-8&serverTimezone=UTC
     username: root
     password: zem509525130
     driver-class-name: com.mysql.cj.jdbc.Driver
-  message:
-    encoding=UTF-8:
   web:
     resources:
       static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
@@ -39,8 +57,10 @@ mybatis-plus:
     db-config:
       id-type: assign_id
 logging:
+  file:
+    name: server.log
   level:
-    root: debug
+    root: info
 id: 123
 account: root
 password: 123456
